# acculer_task

./: README.md  app.py  pyproject.toml
.github/workflows/: codeql.yml
templates/: base.html  create.html  get.html  list.html  update.html
tests/: conftest.py  test_app.py
