[tool.poetry]
name = "acculer-blog-app"
version = "0.1.0"
description = "Simple blog application where user can create, update, read and delete the post"
authors = ["Tariq Jamal A <tariqjamal4267324@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
djlint = "^1.35.4"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
